[tool.poetry]
name = "gym-tl-tools"
version = "0.1.0"
description = "Utilities to wrap gymnasium environments using TL rewards."
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.14" # Because of spottl
spottl = "^2.13"
numpy = ">=1.21"
gymnasium = ">=0.26"
pydantic = "^2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
gym-multigrid = { git = "https://github.com/LIRA-illinois/gym-multigrid", rev = "dev" }
stable-baselines3 = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
