[project]
name = "gym-tl-tools"
version = "0.1.0"
description = "Utilities to wrap gymnasium environments using TL rewards."
authors = [{ name = "Mikihisa Yuasa", email = "myuasa2@illinois.edu" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "spottl>=2.13,<3.0",
    "numpy>=1.21",
    "gymnasium>=0.26",
    "pydantic>=2.0,<3.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
gym-multigrid = { git = "https://github.com/LIRA-illinois/gym-multigrid", rev = "dev" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "gym-multigrid",
    "pytest>=8.4.1",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
]
lint = ["ruff>=0.12.8"]
